--- a/Sdk/src/main/res/layout/fragment_add_card_bottom_sheet.xml
+++ b/Sdk/src/main/res/layout/fragment_add_card_bottom_sheet.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_gravity="bottom"
     android:background="@drawable/bottom_sheet_bg">
 
     <FrameLayout
@@ -141,6 +142,226 @@
                                 android:textColor="#B9232F"
                                 android:textSize="12sp" />
                         </LinearLayout>
+
+
+                        <LinearLayout
+                            android:id="@+id/ll_loader_dcc_and_info"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:visibility="gone"
+                            app:layout_constraintStart_toStartOf="@+id/nameOnCardErrorLayout"
+                            app:layout_constraintTop_toBottomOf="@+id/nameOnCardErrorLayout">
+
+
+                            <FrameLayout
+                                android:id="@+id/fl_loader_and_dcc"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                >
+
+                                <LinearLayout
+                                    android:id="@+id/ll_loader"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginTop="10dp"
+                                    android:gravity="center"
+                                    android:orientation="vertical"
+                                    android:visibility="visible"
+                                    app:layout_constraintStart_toStartOf="@+id/nameOnCardErrorLayout"
+                                    app:layout_constraintTop_toBottomOf="@+id/nameOnCardErrorLayout">
+
+                                    <ProgressBar
+                                        android:id="@+id/circularProgressBar"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="30dp"
+                                        android:layout_gravity="center"
+                                        android:indeterminate="false"
+                                        android:indeterminateDrawable="@drawable/loader_background"
+                                        android:max="100"
+                                        android:progress="20" />
+
+                                    <TextView
+                                        android:id="@+id/loading_text"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginTop="10dp"
+                                        android:enabled="false"
+                                        android:fontFamily="@font/poppins"
+                                        android:text="Please wait. We are fetching available currencies"
+                                        android:textColor="#4F4D55"
+                                        android:textSize="12sp" />
+                                </LinearLayout>
+
+                                <LinearLayout
+                                    android:id="@+id/ll_dcc_options"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginTop="10dp"
+                                    android:orientation="vertical"
+                                    android:visibility="gone"
+                                    app:layout_constraintStart_toStartOf="@+id/ll_loader"
+                                    app:layout_constraintTop_toBottomOf="@+id/ll_loader">
+
+                                    <TextView
+                                        android:id="@+id/tv_select_currency"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:enabled="false"
+                                        android:gravity="start"
+                                        android:fontFamily="@font/poppins"
+                                        android:text="Please Select Currency"
+                                        android:textColor="#000000"
+                                        android:textSize="12sp" />
+
+
+                                    <LinearLayout
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:weightSum="2"
+                                        android:layout_marginTop="5dp"
+                                        android:orientation="horizontal">
+
+                                        <LinearLayout
+                                            android:layout_width="0dp"
+                                            android:layout_height="wrap_content"
+                                            android:orientation="horizontal"
+                                            android:layout_weight="1"
+                                            android:weightSum="3">
+
+                                            <com.google.android.material.radiobutton.MaterialRadioButton
+                                                android:id="@+id/radioButton_1"
+                                                android:layout_width="0dp"
+                                                android:layout_weight="0.8"
+                                                android:buttonTint="#FF0023"
+                                                android:layout_height="30dp"/>
+
+                                            <androidx.cardview.widget.CardView
+                                                android:layout_width="0dp"
+                                                android:layout_height="30dp"
+                                                android:layout_weight="0.8"
+                                                app:cardElevation="0dp"
+                                                app:cardCornerRadius="5dp">
+
+                                                <ImageView
+                                                    android:id="@+id/country_flag_1"
+                                                    android:layout_width="match_parent"
+                                                    android:layout_height="match_parent"
+                                                    android:scaleType="centerCrop"
+                                                    android:src="@drawable/mastercard" />
+
+                                            </androidx.cardview.widget.CardView>
+
+                                            <TextView
+                                                android:id="@+id/country_code_1"
+                                                android:layout_width="0dp"
+                                                android:layout_height="30dp"
+                                                android:fontFamily="@font/poppins"
+                                                android:text="PHP"
+                                                android:layout_weight="1.4"
+                                                android:textColor="#000000"
+                                                android:gravity="center"
+                                                android:textSize="16sp" />
+
+                                        </LinearLayout>
+
+                                        <TextView
+                                            android:id="@+id/details_text_1"
+                                            android:layout_width="0dp"
+                                            android:layout_height="wrap_content"
+                                            android:fontFamily="@font/poppins"
+                                            android:text=""
+                                            android:layout_weight="1"
+                                            android:textColor="#000000"
+                                            android:gravity="start"
+                                            />
+
+                                    </LinearLayout>
+
+                                    <LinearLayout
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:weightSum="2"
+                                        android:layout_marginTop="5dp"
+                                        android:orientation="horizontal">
+
+                                        <LinearLayout
+                                            android:layout_width="0dp"
+                                            android:layout_height="wrap_content"
+                                            android:orientation="horizontal"
+                                            android:layout_weight="1"
+                                            android:weightSum="3">
+
+                                            <com.google.android.material.radiobutton.MaterialRadioButton
+                                                android:id="@+id/radioButton_2"
+                                                android:layout_width="0dp"
+                                                android:layout_weight="0.8"
+                                                android:buttonTint="#FF0023"
+                                                android:layout_height="30dp"
+                                                />
+
+                                            <androidx.cardview.widget.CardView
+                                                android:layout_width="0dp"
+                                                android:layout_height="30dp"
+                                                android:layout_weight="0.8"
+                                                app:cardElevation="0dp"
+                                                app:cardCornerRadius="5dp">
+
+                                                <ImageView
+                                                    android:id="@+id/country_flag_2"
+                                                    android:layout_width="match_parent"
+                                                    android:layout_height="match_parent"
+                                                    android:scaleType="centerCrop"
+                                                    android:src="@drawable/mastercard" />
+
+                                            </androidx.cardview.widget.CardView>
+
+                                            <TextView
+                                                android:id="@+id/country_code_2"
+                                                android:layout_width="0dp"
+                                                android:layout_height="30dp"
+                                                android:fontFamily="@font/poppins"
+                                                android:text=""
+                                                android:layout_weight="1.4"
+                                                android:textColor="#000000"
+                                                android:gravity="center"
+                                                android:textSize="16sp" />
+
+                                        </LinearLayout>
+
+                                        <TextView
+                                            android:id="@+id/details_text_2"
+                                            android:layout_width="0dp"
+                                            android:layout_height="wrap_content"
+                                            android:fontFamily="@font/poppins"
+                                            android:text=""
+                                            android:layout_weight="1"
+                                            android:textColor="#000000"
+                                            android:gravity="start" />
+
+                                    </LinearLayout>
+
+                                </LinearLayout>
+
+                            </FrameLayout>
+
+                            <TextView
+                                android:id="@+id/tv_info_dcc"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:padding="0dp"
+                                android:gravity="fill"
+                                android:ellipsize="none"
+                                android:visibility="gone"
+                                app:layout_constraintTop_toBottomOf="@+id/fl_loader_and_dcc"
+                                android:textSize="12sp"
+                                android:textColor="#2D2B32"
+                                android:layout_marginTop="10dp"
+                                android:text=""
+                                />
+
+                        </LinearLayout>
+
 
                         <LinearLayout
                             android:id="@+id/linearLayout3"
