--- a/Sdk/src/main/res/layout/fragment_main_bottom_sheet.xml
+++ b/Sdk/src/main/res/layout/fragment_main_bottom_sheet.xml
@@ -64,6 +64,8 @@
             android:layout_marginTop="16dp"
             android:layout_weight="1"
             android:isScrollContainer="true"
+            android:scrollbars="vertical"
+            android:fadeScrollbars="false"
             app:layout_constraintTop_toBottomOf="@id/topConstraint"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -135,6 +137,7 @@
                                 android:fontFamily="@font/inter_semibold"
                                 android:textColor="@android:color/black"
                                 android:textSize="16sp"
+                                android:layout_marginEnd="16dp"
                                 app:layout_constraintBottom_toTopOf="@+id/itemsInOrderRecyclerView"
                                 app:layout_constraintEnd_toStartOf="@+id/arrowIcon"
                                 app:layout_constraintTop_toTopOf="parent" />
