--- a/Sdk/src/main/res/layout/fragment_add_card_bottom_sheet.xml
+++ b/Sdk/src/main/res/layout/fragment_add_card_bottom_sheet.xml
@@ -149,7 +149,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="vertical"
-                            android:visibility="gone"
+                            android:visibility="visible"
                             app:layout_constraintStart_toStartOf="@+id/nameOnCardErrorLayout"
                             app:layout_constraintTop_toBottomOf="@+id/nameOnCardErrorLayout">
 
@@ -167,7 +167,7 @@
                                     android:layout_marginTop="10dp"
                                     android:gravity="center"
                                     android:orientation="vertical"
-                                    android:visibility="visible"
+                                    android:visibility="gone"
                                     app:layout_constraintStart_toStartOf="@+id/nameOnCardErrorLayout"
                                     app:layout_constraintTop_toBottomOf="@+id/nameOnCardErrorLayout">
 
@@ -226,7 +226,7 @@
                                             android:layout_width="0dp"
                                             android:layout_height="wrap_content"
                                             android:orientation="horizontal"
-                                            android:layout_weight="1"
+                                            android:layout_weight="0.8"
                                             android:weightSum="3">
 
                                             <com.google.android.material.radiobutton.MaterialRadioButton
@@ -238,10 +238,10 @@
 
                                             <androidx.cardview.widget.CardView
                                                 android:layout_width="0dp"
-                                                android:layout_height="30dp"
+                                                android:layout_height="20dp"
                                                 android:layout_weight="0.8"
-                                                app:cardElevation="0dp"
-                                                app:cardCornerRadius="5dp">
+                                                android:layout_gravity="center"
+                                                app:cardElevation="0dp">
 
                                                 <ImageView
                                                     android:id="@+id/country_flag_1"
@@ -271,7 +271,8 @@
                                             android:layout_height="wrap_content"
                                             android:fontFamily="@font/poppins"
                                             android:text=""
-                                            android:layout_weight="1"
+                                            android:textSize="12sp"
+                                            android:layout_weight="1.2"
                                             android:textColor="#000000"
                                             android:gravity="start"
                                             />
@@ -289,7 +290,7 @@
                                             android:layout_width="0dp"
                                             android:layout_height="wrap_content"
                                             android:orientation="horizontal"
-                                            android:layout_weight="1"
+                                            android:layout_weight="0.8"
                                             android:weightSum="3">
 
                                             <com.google.android.material.radiobutton.MaterialRadioButton
@@ -302,10 +303,10 @@
 
                                             <androidx.cardview.widget.CardView
                                                 android:layout_width="0dp"
-                                                android:layout_height="30dp"
+                                                android:layout_height="20dp"
+                                                android:layout_gravity="center"
                                                 android:layout_weight="0.8"
-                                                app:cardElevation="0dp"
-                                                app:cardCornerRadius="5dp">
+                                                app:cardElevation="0dp">
 
                                                 <ImageView
                                                     android:id="@+id/country_flag_2"
@@ -335,7 +336,8 @@
                                             android:layout_height="wrap_content"
                                             android:fontFamily="@font/poppins"
                                             android:text=""
-                                            android:layout_weight="1"
+                                            android:textSize="12sp"
+                                            android:layout_weight="1.2"
                                             android:textColor="#000000"
                                             android:gravity="start" />
 
