PAN and DOB for stripe testing pending

--- a/Sdk/src/main/res/layout/fragment_delivery_address_bottom_sheet.xml
+++ b/Sdk/src/main/res/layout/fragment_delivery_address_bottom_sheet.xml
@@ -275,7 +275,8 @@
                                 android:fontFamily="@font/poppins"
                                 android:gravity="center_vertical"
                                 android:hint="PAN"
-                                android:inputType="text"
+                                android:textAllCaps="true"
+                                android:inputType="text|textCapCharacters"
                                 android:padding="8dp"
                                 android:textColor="#000000"
                                 android:textColorHint="#7F7D83"
@@ -326,7 +327,10 @@
                                 android:hint="mm-dd-yyyy"
                                 android:inputType="text"
                                 android:padding="8dp"
+                                android:focusable="false"
+                                android:clickable="true"
                                 android:textColor="#000000"
+                                android:drawableEnd="@drawable/baseline_calendar_month_24"
                                 android:textColorHint="#7F7D83"
                                 android:textSize="14sp"
                                 tools:ignore="TouchTargetSizeCheck" />
