--- a/Sdk/src/main/res/layout/fragment_delivery_address_bottom_sheet.xml
+++ b/Sdk/src/main/res/layout/fragment_delivery_address_bottom_sheet.xml
@@ -253,7 +253,7 @@
                             android:id="@+id/panLayout"
                             android:layout_width="match_parent"
                             android:orientation="vertical"
-                            android:visibility="gone"
+                            android:visibility="visible"
                             android:layout_height="match_parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/emailLayout" >
@@ -302,7 +302,7 @@
                             android:id="@+id/dobLayout"
                             android:layout_width="match_parent"
                             android:orientation="vertical"
-                            android:visibility="gone"
+                            android:visibility="visible"
                             android:layout_height="match_parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/panLayout" >
@@ -327,7 +327,9 @@
                                 android:gravity="center_vertical"
                                 android:hint="mm-dd-yyyy"
                                 android:inputType="text"
+                                android:focusable="false"
                                 android:padding="8dp"
+                                android:drawableEnd="@drawable/baseline_calendar_month_24"
                                 android:textColor="#000000"
                                 android:textColorHint="#7F7D83"
                                 android:textSize="14sp"
